# No-Grass-In-Objects-NG

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json.template  GrassControl.toml  LICENSE  README.md  cpp.hint  vcpkg-configuration.json  vcpkg.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: clang_format.yml
cmake/: Version.h.in  XSEPlugin.cmake  headerlist.cmake  sourcelist.cmake  x64-windows-skse.cmake
cmake/ports/commonlibsse-ng/: portfile.cmake  vcpkg.json
include/: PCH.h
include/GrassControl/: Config.h  DistantGrass.h  Events.h  GidFileCache.h  Logging.h  Main.h  Profiler.h  RaycastHelper.h  Stopwatch.hpp  Util.h  exceptionhelper.h  mmath.h
include/Shared/Utility/: Assembly.h  Memory.h
src/: CMakeLists.txt  Config.cpp  DistantGrass.cpp  Events.cpp  GidFileCache.cpp  Hooks.cpp  Logging.cpp  Main.cpp  PCH.h  Profiler.cpp  RaycastHelper.cpp  Util.cpp
src/Shared/Utility/: Memory.cpp
src/SmoothCam/: mmath.cpp
